--- a/index.html
+++ b/index.html
@@ -217,41 +217,41 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/olympics">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 13, 2026</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 13, 2026 00:01:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Ligue 1</a></td>
-<td>February 13, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 10:00:00 AM" data-start="February 13, 2026 10:00:00 AM"></span></td>
+<td>February 14, 2026</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 14, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">FA Cup</a></td>
-<td>February 13, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 11:45:00 AM" data-start="February 13, 2026 11:45:00 AM"></span></td>
+<td>February 14, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Laliga</a></td>
-<td>February 13, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 12:00:00 PM" data-start="February 13, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
+<td>February 14, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 AM" data-start="February 14, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/nba">NBA All Star</a></td>
-<td>February 13, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 04:00:00 PM" data-start="February 13, 2026 04:00:00 PM"></span></td>
-</tr>
-
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
-<td>February 13, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 02:00:00 PM" data-start="February 13, 2026 04:30:00 PM"></span></td>
-
-<tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
-<td>February 13, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 14, 2026 05:00:00 PM" data-start="February 13, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Seattle</a></td>
+<td>February 14, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 AM" data-start="February 14, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-</tr></tbody>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Derby d'Italia (Inter Milan vs Juve)</a></td>
+<td>February 14, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 11:45:00 AM" data-start="February 14, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/nba-streams-1">NBA All Star Saturday</a></td>
+<td>February 14, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-16">El Súper Clásico</a></td>
+<td>February 14, 2026 7:07 PM</td>
+<td><span class="countdown-timer" data-end="February 15, 2026 07:07:00 PM" data-start="February 14, 2026 07:07:00 PM"></span>
+</td>
+<tr>
+</tr></tr></tbody>
 </table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
