--- a/rugby-1.html
+++ b/rugby-1.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
-<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
+    <title>Roxiestreams - DLHD Stream</title>
     <meta name="description" content="Free PPV UFC, TV, NBA, NFL, and F1 streams">
     <meta name="keywords" content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +13,6 @@
     <link href="/css/buttons.css" rel="stylesheet">
     <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -47,9 +44,10 @@
             height: 80vh;
             margin-top: 50px;
         }
-        #playerContainer {
-            width: 100%;
+        .dlhd-iframe {
+            width: 70%;
             height: 100%;
+            border: none;
         }
         .embedchat {
             width: 30%;
@@ -64,15 +62,7 @@
             height: 100%;
             border: none;
         }
-        .streamchanger {
-            position: absolute;
-            top: -40px;
-            left: 10px;
-            display: flex;
-            gap: 10px;
-        }
     </style>
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-black">
@@ -99,15 +89,10 @@
 
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
-            <div id="playerContainer"></div>
-            <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/main.m3u8')">
-                    Stream 1
-                </button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://dlhd.link/stream/stream-350.php')">
-                    DLHD Stream
-                </button>
-            </div>
+            <!-- DLHD iframe only (no Clappr) -->
+            <iframe class="dlhd-iframe" src="https://dlhd.link/stream/stream-350.php"></iframe>
+
+            <!-- Optional: keep the YouTube chat on the right -->
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
             </div>
@@ -121,52 +106,6 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-    <script>
-        var clapprPlayer;
-
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
-
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                });
-            }
-        }
-
-        window.onload = function() {
-            // Default stream is now your DLHD stream
-            showPlayer('clappr', 'https://dlhd.link/stream/stream-350.php');
-        };
-    </script>
-
-    <!-- Optional: uncomment if you want to re‑enable the dev‑tool / context‑menu blocking -->
-    <!--
-    <script>
-        document.addEventListener('contextmenu', function (e) {
-            e.preventDefault();
-        });
-
-        document.addEventListener('keydown', function (e) {
-            if ((e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) ||
-                (e.ctrlKey && e.shiftKey && e.key === 'J')) {
-                e.preventDefault();
-            }
-        });
-    </script>
-    -->
-
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
-        aclib.runPop({
-            zoneId: '10754426',
-        });
-    </script>
 </body>
 </html>
