--- a/nba-streams-1.html
+++ b/nba-streams-1.html
@@ -103,6 +103,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nbc.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
@@ -138,7 +139,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nbc.m3u8');
+            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba.m3u8');
         };
     </script>
     <script>
