--- a/soccer.html
+++ b/soccer.html
@@ -99,134 +99,124 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Burton Albion vs West Ham</a></td>
-<td>February 14, 2026 4:15 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Udinese vs Sassuolo</a></td>
+<td>February 14, 2026 3:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 04:15:00 AM" data-start="February 14, 2026 04:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Stevenage vs Huddersfield</a></td>
-<td>February 14, 2026 4:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Birmingham City vs Leeds United</a></td>
+<td>February 14, 2026 4:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Birmingham City vs West Bromwich</a></td>
-<td>February 14, 2026 4:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Espanyol vs Celta Vigo</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Real Oviedo vs Athletic Club</a></td>
 <td>February 14, 2026 5:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Grimsby Town vs Wolves</a></td>
+<td>February 14, 2026 5:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 05:00:00 AM" data-start="February 14, 2026 05:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Werder Bremen vs Bayern München</a></td>
-<td>February 14, 2026 6:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Stoke City vs Fulham</a></td>
+<td>February 14, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 06:30:00 AM" data-start="February 14, 2026 06:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Manchester City vs Salford City</a></td>
-<td>February 14, 2026 7:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Oxford United vs Sunderland</a></td>
+<td>February 14, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 07:00:00 AM" data-start="February 14, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Derby County vs Swansea City</a></td>
-<td>February 14, 2026 7:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Cremonese vs Genoa</a></td>
+<td>February 14, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 07:00:00 AM" data-start="February 14, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Preston North End vs Watford</a></td>
-<td>February 14, 2026 7:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Le Havre vs Toulouse</a></td>
+<td>February 14, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 07:00:00 AM" data-start="February 14, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Getafe vs Villarreal</a></td>
-<td>February 14, 2026 7:15 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Kilmarnock vs Celtic</a></td>
+<td>February 14, 2026 6:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 07:15:00 AM" data-start="February 14, 2026 07:15:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Marseille vs Strasbourg</a></td>
-<td>February 14, 2026 8:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Augsburg vs Heidenheim</a></td>
+<td>February 14, 2026 6:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 08:00:00 AM" data-start="February 14, 2026 08:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Lazio vs Atalanta</a></td>
-<td>February 14, 2026 9:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Rayo Vallecano vs Atletico Madrid/a></td>
+<td>February 14, 2026 7:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Lorient vs Angers SCO</a></td>
+<td>February 14, 2026 8:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Metz vs Auxerre</a></td>
+<td>February 14, 2026 8:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Arsenal vs Wigan Athletic</a></td>
+<td>February 14, 2026 8:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 09:00:00 AM" data-start="February 14, 2026 09:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Al Fateh vs Al Nassr</a></td>
-<td>February 14, 2026 9:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">RB Leipzig vs Wolfsburg</a></td>
+<td>February 14, 2026 8:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Stuttgart vs Köln</a></td>
-<td>February 14, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Sevilla vs Deportivo Alavés</a></td>
-<td>February 14, 2026 9:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 09:30:00 AM" data-start="February 14, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Aston Villa vs Newcastle</a></td>
-<td>February 14, 2026 9:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Torino vs Bologna</a></td>
+<td>February 14, 2026 9:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 09:45:00 AM" data-start="February 14, 2026 09:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Lille vs Brest</a></td>
-<td>February 14, 2026 10:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Levante vs Valencia</a></td>
+<td>February 14, 2026 9:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 10:00:00 AM" data-start="February 14, 2026 10:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Inter Milan vs Juventus</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Lyon vs Nice</a></td>
 <td>February 14, 2026 11:45 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 11:45:00 AM" data-start="February 14, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Liverpool vs Brighton</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Napoli vs Roma</a></td>
+<td>February 14, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 15, 2026 12:00:00 PM" data-start="February 14, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Mallorca vs Real Betis</a></td>
 <td>February 14, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 12:00:00 PM" data-start="February 14, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Real Madrid vs Real Sociedad</a></td>
-<td>February 14, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 12:00:00 PM" data-start="February 14, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Paris vs Lens</a></td>
-<td>February 14, 2026 12:05 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Botafogo vs Flamengo</a></td>
+<td>February 14, 2026 12:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 12:05:00 PM" data-start="February 14, 2026 12:05:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">URT vs Cruzeiro</a></td>
-<td>February 14, 2026 2:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Cruz Azul vs Tigres UANL</a></td>
+<td>February 14, 2026 2:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 02:00:00 PM" data-start="February 14, 2026 02:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Pachuca vs Atlas</a></td>
-<td>February 14, 2026 3:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Boca Juniors vs Platense</a></td>
+<td>February 14, 2026 2:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Vasco Da Gama vs Volta Redonda</a></td>
-<td>February 14, 2026 4:30 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-15">Ypiranga Erechim vs Internacional</a></td>
+<td>February 14, 2026 3:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 15, 2026 04:30:00 PM" data-start="February 14, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-17">Monterrey vs León</a></td>
-<td>February 14, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 05:00:00 PM" data-start="February 14, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">Juárez vs Necaxa</a></td>
-<td>February 14, 2026 5:06 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 05:06:00 PM" data-start="February 14, 2026 05:06:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Chivas vs América</a></td>
-<td>February 14, 2026 7:07 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 15, 2026 07:07:00 PM" data-start="February 14, 2026 07:07:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
