--- a/index.html
+++ b/index.html
@@ -223,25 +223,25 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-3">Laliga</a></td>
 <td>February 15, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 05:00:00 AM" data-start="February 14, 2026 05:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 16, 2026 05:00:00 AM" data-start="February 15, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">FA Cup</a></td>
 <td>February 15, 2026 05:30 AM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 04:30:00 AM" data-start="February 14, 2026 04:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 16, 2026 05:30:00 AM" data-start="February 15, 2026 05:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nascar">NASCAR Cup Series - Daytona</a></td>
 <td>February 15, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 10:00:00 AM" data-start="February 14, 2026 10:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 16, 2026 11:00:00 AM" data-start="February 15, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba-streams-1">NBA All Star Sunday</a></td>
 <td>February 15, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="February 15, 2026 03:00:00 PM" data-start="February 14, 2026 03:00:00 PM"></span></td>
+<td><span class="countdown-timer" data-end="February 16, 2026 02:00:00 PM" data-start="February 15, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
-</tr></tr></tbody>
+</tr></tbody>
 </table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
