--- a/nascar.html
+++ b/nascar.html
@@ -105,6 +105,7 @@
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.833577.xyz/nascar.m3u8')">Stream 1 (FOX)</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/nas.m3u8')">Stream 2 (International)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://dtmf21.b-cdn.net/docx/master.m3u8')">Stream 3 (International 25FPS)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
