--- a/soccer-streams-4.html
+++ b/soccer-streams-4.html
@@ -129,7 +129,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('dep.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
