--- a/fighting.html
+++ b/fighting.html
@@ -100,8 +100,8 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
-<td>February 16, 2026 17:00 PM</td>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
+<td>February 17, 2026 17:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 16, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
